# nanum

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  clippy.yaml
admin-cli/: Cargo.toml
admin-cli/src/: cli.rs  main.rs  s3.rs
backend/: Cargo.toml
backend/src/: config.rs  main.rs  s3.rs  types.rs
backend/src/handler/: api.rs  auth.rs  mod.rs  statics.rs
core/: Cargo.toml
core/src/: types.rs
core/src/utils/: base64.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
frontend/public/: manifest.json
frontend/src/: app.rs  download.rs  main.rs  navbar.rs  route.rs  types.rs  upload.rs
