[package]
name = "nanum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.0"
axum = { version = "0.6.12", features = ["headers"] }
base64 = "0.21.0"
envy = "0.4.2"
headers = "0.3.8"
include_dir = "0.7.3"
jsonwebtoken = "8.3.0"
mime = "0.3.17"
nanum-core = { version = "0.1.0", path = "../core" }
oauth2 = "4.3.0"
once_cell = "1.17.1"
random-string = "1.0.0"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
url = { version = "2.3.1", features = ["serde"] }
