[package]
name = "nanum-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.1", features = ["stream"] }
chacha20poly1305 = "0.10.1"
futures-util = "0.3.28"
getrandom = { version = "0.2.8", features = ["js"] }
gloo-net = "0.2.6"
hkdf = "0.12.3"
js-sys = "0.3.61"
log = "0.4.17"
nanum-core = { version = "0.1.0", path = "../core" }
serde = { version = "1.0.159", features = ["derive"] }
sha2 = "0.10.6"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
wasm-streams = "0.3.0"
web-sys = { version = "0.3.61", features = ["HtmlLinkElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
